fixed removing whitespace
do not use position relative, instead use position absolute

--- a/home.css
+++ b/home.css
@@ -2,14 +2,15 @@
     font-family: 'Raleway', sans-serif;
     font-weight: 0px;
     text-align: right;
-    position: relative;
-    top:0px;
-    /* line-height: 60px; */
+    position: absolute;
+    line-height: 50px;
+    margin-left: 1250px;
+    margin-top: -100px;
 }
+
 
 .hr{
     position: relative;
-
     bottom: 70px;
     float: right;
     height: 75px;
@@ -34,7 +35,7 @@
 .introTitle {
 	font-family: 'Raleway', sans-serif;
 	position: relative;
-	top: 0px;
+	top: 50px;
     font-weight: 700;
     font-size: 50pt;
     text-transform: uppercase;
